# MCA-RMCA

./: .gitignore  CMakeLists.txt  README.md
MAPD/: Agent.cpp  Agent.h  Assignment.h  CBSHOnline.cpp  CBSHOnline.h  PathPlanning.cpp  PathPlanning.h  TARealCost.cpp  TARealCost.h  Task.cpp  Task.h  TaskAssignment.cpp  TaskAssignment.h  TaskAssignmentPP.cpp  TaskAssignmentPP.h  TaskAssignmentPPTask.cpp  TaskAssignmentPPTask.h  TaskAssignmentRegret.cpp  TaskAssignmentRegret.h  TaskAssignmentRegretTask.cpp  TaskAssignmentRegretTask.h  TaskAssignmentTaskHeap.cpp  TaskAssignmentTaskHeap.h  TaskAssignmentTaskHeapRegret.cpp  TaskAssignmentTaskHeapRegret.h  basic.h  main.cpp  online_simu.cpp  online_simu.h
MAPF/src/: CMakeLists.txt  Conflict.cpp  Conflict.h  ConstraintTable.cpp  ConstraintTable.h  CorridorReasoning.cpp  CorridorReasoning.h  ICBSHSearchPairAnalysis.cpp  ICBSHSearchPairAnalysis.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  MDD.cpp  MDD.h  MDDNode.cpp  MDDNode.h  RectangleReasoning.cpp  RectangleReasoning.h  ReservationTable.cpp  ReservationTable.h  SingleAgentICBS.cpp  SingleAgentICBS.h  SinglePlanning.cpp  SinglePlanning.h  agents_loader.cpp  agents_loader.h  common.cpp  common.h  compute_heuristic.cpp  compute_heuristic.h  driver.cpp  flat_map_loader.cpp  flat_map_loader.h  map_loader.cpp  map_loader.h  map_loader_with_cost.cpp  map_loader_with_cost.h
MAPF/src/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  ICBSSearch-checkpoint.cpp
examples/kiva-agent-maps/: kiva-10-500-5.map  kiva-20-500-5.map  kiva-3-500-5.map  kiva-30-500-5.map  kiva-40-500-5.map  kiva-5-500-5.map  kiva-50-500-5.map
examples/kiva-tasks/0.2-500/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/0.5-500/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/1-500/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/10-500/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/100/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/2-500/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/200/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
examples/kiva-tasks/300/: 0.task  1.task  10.task  11.task  12.task  13.task  14.task  15.task  16.task  17.task  18.task  19.task  2.task  20.task  21.task  22.task  23.task  24.task  3.task  4.task  5.task  6.task  7.task  8.task  9.task
(+75 files in other folders)
